--- a/apps/sta/src/styles.scss
+++ b/apps/sta/src/styles.scss
@@ -1,6 +1,7 @@
 @import 'libs/shared/styles/src';
 @import 'libs/shared/styles/src/lib/tabs';
 @import 'https://fonts.googleapis.com/icon?family=Material+Icons';
+@import '~@angular/material/theming/';
 
 .full-height {
   height: 100%;
@@ -13,4 +14,17 @@
 .icon,
 .material-icons {
   font-size: 20px;
+}
+
+.elevation {
+  @include mat-elevation-transition;
+  @include mat-elevation(2);
+
+  &.active {
+    cursor: pointer;
+
+    &:hover {
+      @include mat-elevation(8);
+    }
+  }
 }
